--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 fastapi==0.111.0
-uvicorn[standard]==0.30.1
+uvicorn==0.30.1
+uvloop==0.19.0
+httptools==0.6.1
 httpx==0.27.0
 pydantic==2.7.1
 python-dotenv==1.0.1
